--- a/tests/Util/CMakeLists.txt
+++ b/tests/Util/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB.t PUBLIC
     FileUtil.t.cpp
     IdAllocator.t.cpp
+    IdAllocatorUnbounded.t.cpp
     Signal.t.cpp
     Waiter.t.cpp
 )
