Add tagging to ECS to allow required, optional, and excluded components in views and component sets

--- a/include/BLIB/ECS/CMakeLists.txt
+++ b/include/BLIB/ECS/CMakeLists.txt
@@ -8,6 +8,8 @@ target_sources(BLIB PUBLIC
     Events.hpp
     Registry.hpp
     StableHandle.hpp
+    Tags.hpp
+    TagsImpl.hpp
     View.hpp
     ViewImpl.hpp
 )
