--- a/examples/Animation/CMakeLists.txt
+++ b/examples/Animation/CMakeLists.txt
@@ -1,11 +1,10 @@
 add_executable(animation main.cpp)
 
-target_link_libraries(animation
-    BLIB
-    sfml-graphics
-    sfml-audio
-    sfml-window
-)
+include(configure_blib_target)
+include(link_blib_target)
+
+configure_blib_target(animation)
+link_blib_target(animation)
 
 set_target_properties(animation
     PROPERTIES
