--- a/examples/Logging/CMakeLists.txt
+++ b/examples/Logging/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_executable(logging main.cpp)
 
-target_link_libraries(logging
-    BLIB
-    sfml-graphics
-    sfml-window
-)
+include(configure_blib_target)
+include(link_blib_target)
+
+configure_blib_target(logging)
+link_blib_target(logging)
 
 set_target_properties(logging
     PROPERTIES
