--- a/.github/workflows/verify-windows.yml
+++ b/.github/workflows/verify-windows.yml
@@ -14,6 +14,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'true'
+    
+    - name: Prepare Vulkan SDK
+      uses: humbletim/setup-vulkan-sdk@v1.2.0
+      with:
+        vulkan-query-version: 1.3.204.0
+        vulkan-components: Vulkan-Headers, Vulkan-Loader, Glslang
+        vulkan-use-cache: true
       
     - name: configure
       run: cmake -DON_CI=On -S . -B ./build
