--- a/.github/workflows/verify-windows.yml
+++ b/.github/workflows/verify-windows.yml
@@ -16,10 +16,7 @@ jobs:
         submodules: 'true'
     
     - name: Install Vulkan SDK
-      uses: humbletim/install-vulkan-sdk@v1.1.1
-      with:
-        version: 1.3.204.0
-        cache: true
+      run: choco install vulkan-sdk
       
     - name: configure
       run: cmake -DON_CI=On -S . -B ./build
