--- a/.github/workflows/verify-linux.yml
+++ b/.github/workflows/verify-linux.yml
@@ -18,16 +18,11 @@ jobs:
     - name: update apt
       run: sudo apt-get update
 
-    - name: Setup Vulkan SDK source
-      run: |
-        wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
-        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.2.162-focal.list https://packages.lunarg.com/vulkan/1.2.162/lunarg-vulkan-1.2.162-focal.list
-
     - name: package-install
-      run: sudo apt-get install libx11-dev xorg-dev freeglut3-dev libudev-dev libopenal-dev libvorbis-dev libflac-dev vulkan-sdk
+      run: sudo apt-get install libx11-dev xorg-dev freeglut3-dev libudev-dev libopenal-dev libvorbis-dev libflac-dev
       
     - name: configure
-      run: cmake -DON_CI=ON -S . -B ./build
+      run: cmake -DON_CI=ON -DCOMPILE_SHADERS=OFF -S . -B ./build
       
     - name: make
       run: cd build && cmake --build .
