--- a/.github/workflows/verify-macos.yml
+++ b/.github/workflows/verify-macos.yml
@@ -14,15 +14,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'true'
-
-    - name: Install Vulkan SDK
-      uses: humbletim/install-vulkan-sdk@v1.1.1
-      with:
-        version: 1.3.204.0
-        cache: true
       
     - name: configure
-      run: cmake -DON_CI=On -S . -B ./build
+      run: cmake -DON_CI=On  -DCOMPILE_SHADERS=Off -S . -B ./build
       
     - name: make
       run: cd build && cmake --build .
