Copy required dll for windows tests

--- a/.github/workflows/verify-windows.yml
+++ b/.github/workflows/verify-windows.yml
@@ -22,7 +22,9 @@ jobs:
       run: cmake -DON_CI=On -S . -B ./build
       
     - name: make
-      run: cd build && cmake --build .
+      run: |
+        cd build && cmake --build .
+        cp ../lib/SFML/extlibs/bin/x64/openal32.dll ./tests
 
     - name: test
       run: build/tests/BLIB.t 
