--- a/.github/workflows/verify-macos.yml
+++ b/.github/workflows/verify-macos.yml
@@ -14,9 +14,12 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'true'
+
+    - name: Point to glslc
+      run: export PATH=$PATH:"${{ github.workspace }}/tools/glslc/Macos"
       
     - name: configure
-      run: cmake -DON_CI=On  -DCOMPILE_SHADERS=Off -S . -B ./build
+      run: cmake -DON_CI=On -S . -B ./build
       
     - name: make
       run: cd build && cmake --build .
