Implement engine::Window wrapper for using glfw on macos

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,7 +22,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "cd build && cmake --build .",
+            "command": "cd build && cmake --build . -j 6",
             "group": {
                 "kind": "build",
                 "isDefault": true
