--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ add_subdirectory(lib/SFML)
 add_subdirectory(lib/volk)
 target_include_directories(volk SYSTEM PUBLIC ${BLIB_PATH}/lib/Vulkan-Headers/include)
 
+set(GLFW_LIBRARY_TYPE "STATIC")
+add_subdirectory(lib/glfw)
+
 add_subdirectory(include/BLIB)
 add_subdirectory(src)
 
