Dynamically find glslc from builtin or system path. Allow user override via cache

--- a/.github/workflows/verify-windows.yml
+++ b/.github/workflows/verify-windows.yml
@@ -19,7 +19,7 @@ jobs:
       run: Add-Content $env:GITHUB_PATH "${{ github.workspace }}/tools/glslc/Windows"
       
     - name: configure
-      run: cmake -DON_CI=On -S . -B ./build
+      run: cmake -S . -B ./build
       
     - name: make
       run: |
