--- a/.github/workflows/verify-macos.yml
+++ b/.github/workflows/verify-macos.yml
@@ -19,7 +19,7 @@ jobs:
       run: echo "${{ github.workspace }}/tools/glslc/Macos" >> $GITHUB_PATH
       
     - name: configure
-      run: cmake -DON_CI=On -S . -B ./build
+      run: cmake -S . -B ./build
       
     - name: make
       run: cd build && cmake --build .
