--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,5 @@ add_subdirectory(Render)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
 add_subdirectory(Serialization)
+add_subdirectory(Systems)
 add_subdirectory(Util)
