--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(Components)
 add_subdirectory(ECS)
 add_subdirectory(Engine)
 add_subdirectory(Events)
+add_subdirectory(Graphics)
 add_subdirectory(Input)
 add_subdirectory(Interfaces)
 add_subdirectory(Logging)
