--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PRIVATE
 
 add_subdirectory(Components)
 add_subdirectory(Descriptors)
+add_subdirectory(Graph)
 add_subdirectory(Overlays)
 add_subdirectory(Primitives)
 add_subdirectory(Resources)
