Add unit tests around render graph and get it working

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(Engine)
 add_subdirectory(Events)
 add_subdirectory(Math)
 add_subdirectory(Parser)
+add_subdirectory(Render)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
 add_subdirectory(Serialization)
