Add example fade out post fx graph task and other changes required for it to work

--- a/include/BLIB/Render/Graph/CMakeLists.txt
+++ b/include/BLIB/Render/Graph/CMakeLists.txt
@@ -16,5 +16,6 @@ target_sources(BLIB PUBLIC
 )
 
 add_subdirectory(Assets)
+add_subdirectory(Providers)
 add_subdirectory(Strategies)
 add_subdirectory(Tasks)
