Fully implement animation player component and system

--- a/include/BLIB/Systems/CMakeLists.txt
+++ b/include/BLIB/Systems/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(BLIB PUBLIC
+	Animation2DSystem.hpp
     BuiltinDrawableSystems.hpp
 	BuiltinDescriptorComponentSystems.hpp
 	DescriptorComponentSystem.hpp
