--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PRIVATE
 	Mesh.cpp
 	Orientation3D.cpp
 	OverlayScaler.cpp
+	Slideshow.cpp
 	Sprite.cpp
 	Text.cpp
 	Transform2D.cpp
