--- a/tests/Util/CMakeLists.txt
+++ b/tests/Util/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB.t PUBLIC
     FileUtil.t.cpp
     IdAllocator.t.cpp
     IdAllocatorUnbounded.t.cpp
+    RangeAllocatorUnbounded.t.cpp
     Signal.t.cpp
     Waiter.t.cpp
 )
