Implement and test IndexMappedList container

--- a/include/BLIB/Containers/CMakeLists.txt
+++ b/include/BLIB/Containers/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
     Vector2d.hpp
     Cache.hpp
     FastQueue.hpp
+    IndexMappedList.hpp
     ObjectWrapper.hpp
     RingBuffer.hpp
     RingQueue.hpp
