--- a/tests/Containers/CMakeLists.txt
+++ b/tests/Containers/CMakeLists.txt
@@ -1,11 +1,12 @@
 target_sources(BLIB.t PUBLIC
     Cache.t.cpp
-    FastQueue.t.cpp
-    RingBuffer.t.cpp
     FastEraseVector.t.cpp
-    ObjectPool.t.cpp
-    QuadTree.t.cpp
+    FastQueue.t.cpp
     Grid.t.cpp
+    IndexMappedList.t.cpp
+    ObjectPool.t.cpp
     ObjectWrapper.t.cpp
+    QuadTree.t.cpp
+    RingBuffer.t.cpp
     RingQueue.t.cpp
 )
