Add and test DependencyGraph helper to ECS

--- a/include/BLIB/ECS/CMakeLists.txt
+++ b/include/BLIB/ECS/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(BLIB PUBLIC
     ComponentPool.hpp
     ComponentSet.hpp
     ComponentSetImpl.hpp
+    DependencyGraph.hpp
     Entity.hpp
     Events.hpp
     ParentGraph.hpp
