--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "lib/glfw"]
 	path = lib/glfw
 	url = git@github.com:glfw/glfw.git
+[submodule "lib/plf_colony"]
+	path = lib/plf_colony
+	url = git@github.com:mattreecebentley/plf_colony.git
