--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_subdirectory(Animation)
 add_subdirectory(Audio)
 add_subdirectory(Containers)
 add_subdirectory(Engine)
+add_subdirectory(Graphics)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
 add_subdirectory(Menu)
