--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_include_directories(BLIB PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_subdirectory(Audio)
 add_subdirectory(Cameras)
 add_subdirectory(Components)
 add_subdirectory(ECS)
@@ -10,7 +11,6 @@ add_subdirectory(Input)
 add_subdirectory(Interfaces)
 add_subdirectory(Logging)
 add_subdirectory(Math)
-add_subdirectory(Media)
 add_subdirectory(Parser)
 add_subdirectory(Render)
 add_subdirectory(Resources)
