--- a/examples/Engine/CMakeLists.txt
+++ b/examples/Engine/CMakeLists.txt
@@ -16,3 +16,14 @@ set_target_properties(engine
     RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}"
     RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}"
 )
+
+# Copy compiled shaders. This step is not needed for top-level targets that set SHADER_PATH
+if(TARGET blib_builtin_shaders)
+    add_custom_target(copy_engine_shaders
+        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy_shaders.cmake
+        DEPENDS blib_builtin_shaders
+    )
+    add_dependencies(engine copy_engine_shaders)
+else()
+    message(WARNING "Engine example requires the built-in shaders to be compiled. Specify glslc path in GLSLC_PATH")
+endif()
