Create Scene2D and Scene3D. Move camera creation and near/far plane setting into scenes

--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -5,4 +5,6 @@ target_sources(BLIB PUBLIC
     SceneObject.hpp
     SceneObjectStorage.hpp
     SceneRenderContext.hpp
+    Scene2D.hpp
+    Scene3D.hpp
 )
