Implement reference counting for scenes

--- a/include/BLIB/Render/Resources/CMakeLists.txt
+++ b/include/BLIB/Render/Resources/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
     PipelineLayoutCache.hpp
     RenderPassCache.hpp
     ScenePool.hpp
+    SceneRef.hpp
     ShaderModuleCache.hpp
     TexturePool.hpp
     TextureRef.hpp
