--- a/src/Interfaces/GUI/CMakeLists.txt
+++ b/src/Interfaces/GUI/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(Data)
 add_subdirectory(Dialogs)
 add_subdirectory(Elements)
 add_subdirectory(Packers)
+add_subdirectory(Renderer)
 add_subdirectory(Renderers)
