Fully integrate new renderer into GUI and elements. Remove old renderers

--- a/include/BLIB/Interfaces/GUI/Renderer/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/CMakeLists.txt
@@ -2,5 +2,8 @@ target_sources(BLIB PUBLIC
     Component.hpp
     ComponentFactory.hpp
     FactoryTable.hpp
+    FlashProvider.hpp
+    HighlightProvider.hpp
     Renderer.hpp
+    TooltipProvider.hpp
 )
