--- a/src/Interfaces/GUI/CMakeLists.txt
+++ b/src/Interfaces/GUI/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PRIVATE
     Event.cpp
     GUI.cpp
+    RenderSettings.cpp
 )
 
 add_subdirectory(Data)
@@ -8,4 +9,3 @@ add_subdirectory(Dialogs)
 add_subdirectory(Elements)
 add_subdirectory(Packers)
 add_subdirectory(Renderer)
-add_subdirectory(Renderers)
