Get GUI example running with empty window

--- a/include/BLIB/Interfaces/GUI/Renderer/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/CMakeLists.txt
@@ -4,6 +4,12 @@ target_sources(BLIB PUBLIC
     FactoryTable.hpp
     FlashProvider.hpp
     HighlightProvider.hpp
+    NullComponent.hpp
+    NullFlashProvider.hpp
+    NullHighlightProvider.hpp
+    NullTooltipProvider.hpp
     Renderer.hpp
     TooltipProvider.hpp
 )
+
+add_subdirectory(Components)
