Implement progress bar component

--- a/include/BLIB/Interfaces/GUI/Renderer/Components/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Components/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(BLIB PUBLIC
     BoxComponent.hpp
     ImageComponent.hpp
     LabelComponent.hpp
+    ProgressBarComponent.hpp
     SeparatorComponent.hpp
 )
