--- a/src/Interfaces/GUI/Renderer/Components/CMakeLists.txt
+++ b/src/Interfaces/GUI/Renderer/Components/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(BLIB PRIVATE
     BoxComponent.cpp
     ImageComponent.cpp
     LabelComponent.cpp
+    ProgressBarComponent.cpp
     SeparatorComponent.cpp
 )
