Implement button component

--- a/include/BLIB/Interfaces/GUI/Renderer/Components/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Components/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
     BoxComponent.hpp
+    ButtonComponent.hpp
     ImageComponent.hpp
     LabelComponent.hpp
     ProgressBarComponent.hpp
