--- a/src/Interfaces/GUI/Renderer/Components/CMakeLists.txt
+++ b/src/Interfaces/GUI/Renderer/Components/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PRIVATE
     BoxComponent.cpp
+    ButtonComponent.cpp
     ImageComponent.cpp
     LabelComponent.cpp
     ProgressBarComponent.cpp
