Mostly implement highlight provider. Has issues with positioning on parent change

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PUBLIC
     ButtonComponent.hpp
     ImageComponent.hpp
     LabelComponent.hpp
+    OverlayHighlightProvider.hpp
     ProgressBarComponent.hpp
     SeparatorComponent.hpp
 )
