Implement combobox component in closed state only. Issue with positioning, may be related to label offset issue

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
     BoxComponent.hpp
     ButtonComponent.hpp
+    ComboBoxComponent.hpp
     ImageComponent.hpp
     LabelComponent.hpp
     OverlayHighlightProvider.hpp
