--- a/include/BLIB/Graphics/Shapes2D/CMakeLists.txt
+++ b/include/BLIB/Graphics/Shapes2D/CMakeLists.txt
@@ -1,3 +1,7 @@
 target_sources(BLIB PUBLIC
+    CircleBase.hpp
+    RectangleBase.hpp
     Shape2D.hpp
+    SingleShape2D.hpp
+    TriangleBase.hpp
 )
