Add drawable component and system for batched shapes

--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
 	Animation2D.hpp
 	Animation2DPlayer.hpp
+	BatchedShapes2D.hpp
 	Mesh.hpp
 	Orientation3D.hpp
 	OverlayScaler.hpp
