--- a/src/Graphics/CMakeLists.txt
+++ b/src/Graphics/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PRIVATE
 	Animation2D.cpp
 	BatchedShapes2D.cpp
+	BatchRectangle.cpp
 	Circle.cpp
 	Rectangle.cpp
 	Slideshow.cpp
