Implement batch triangle and circle. Fix validation error on index buffer copy. Add ability to remove shape from batch

--- a/include/BLIB/Graphics/CMakeLists.txt
+++ b/include/BLIB/Graphics/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(BLIB PUBLIC
 	Animation2D.hpp
+	BatchCircle.hpp
 	BatchedShapes2D.hpp
 	BatchRectangle.hpp
+	BatchTriangle.hpp
 	Circle.hpp
 	Drawable.hpp
 	Rectangle.hpp
