Begin implementing window component. Many issues

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -7,4 +7,5 @@ target_sources(BLIB PUBLIC
     OverlayHighlightProvider.hpp
     ProgressBarComponent.hpp
     SeparatorComponent.hpp
+    WindowComponent.hpp
 )
