Fix bugs: transferable destruction, entity parent erase, gui provider element erase, gui component erase

--- a/include/BLIB/ECS/CMakeLists.txt
+++ b/include/BLIB/ECS/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(BLIB PUBLIC
     DependencyGraph.hpp
     Entity.hpp
     Events.hpp
+    ParentDestructionBehavior.hpp
     ParentGraph.hpp
     Registry.hpp
     Tags.hpp
