Implement ComboBoxComponent (bad positioning). Implement overlay object sorting and update highlight provider

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
     BoxComponent.hpp
     ButtonComponent.hpp
+    CheckButtonComponent.hpp
     ComboBoxComponent.hpp
     ImageComponent.hpp
     LabelComponent.hpp
