Add ECS entity flags, dummy flag, IgnoresDummy trait, and test

--- a/include/BLIB/ECS/CMakeLists.txt
+++ b/include/BLIB/ECS/CMakeLists.txt
@@ -2,11 +2,13 @@ target_sources(BLIB PUBLIC
     Cleaner.hpp
     ComponentMask.hpp
     ComponentPool.hpp
+    ComponentPoolImpl.hpp
     ComponentSet.hpp
     ComponentSetImpl.hpp
     DependencyGraph.hpp
     Entity.hpp
     Events.hpp
+    Flags.hpp
     ParentDestructionBehavior.hpp
     ParentGraph.hpp
     Registry.hpp
