--- a/include/BLIB/ECS/Traits/CMakeLists.txt
+++ b/include/BLIB/ECS/Traits/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PUBLIC
     ChildAware.hpp
+    IgnoresDummy.hpp
     ParentAware.hpp
     ParentAwareVersioned.hpp
     Versioned.hpp
