Pull out entity logic from drawable into shared base. Add dummy2d graphics class

--- a/include/BLIB/Graphics/CMakeLists.txt
+++ b/include/BLIB/Graphics/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(BLIB PUBLIC
 	BatchTriangle.hpp
 	Circle.hpp
 	Drawable.hpp
+	Dummy2D.hpp
 	Rectangle.hpp
 	Slideshow.hpp
 	Sprite.hpp
