Enhance Text features. Implement TextEntryComponent. Fix stale overlay scaler scissors when transform changes

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -9,5 +9,6 @@ target_sources(BLIB PUBLIC
     OverlayHighlightProvider.hpp
     ProgressBarComponent.hpp
     SeparatorComponent.hpp
+    TextEntryComponent.hpp
     WindowComponent.hpp
 )
