--- a/include/BLIB/Interfaces/GUI/Renderer/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(BLIB PUBLIC
     NullHighlightProvider.hpp
     NullTooltipProvider.hpp
     Renderer.hpp
+    TextEntryComponentBase.hpp
     TooltipProvider.hpp
 )
 
