Implement notebook component, fix overlay render order, update highlight provider approach

--- a/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(BLIB PRIVATE
     LabelComponent.cpp
     OverlayFlashProvider.cpp
     OverlayHighlightProvider.cpp
+    NotebookComponent.cpp
     ProgressBarComponent.cpp
     SeparatorComponent.cpp
     TextEntryComponent.cpp
