--- a/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(BLIB PRIVATE
     OverlayHighlightProvider.cpp
     NotebookComponent.cpp
     ProgressBarComponent.cpp
+    RadioButtonComponent.cpp
     SeparatorComponent.cpp
     TextEntryComponent.cpp
     WindowComponent.cpp
