--- a/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PRIVATE
     BoxComponent.cpp
     ButtonComponent.cpp
+    CanvasComponent.cpp
     CheckButtonComponent.cpp
     ComboBoxComponent.cpp
     ImageComponent.cpp
