--- a/include/BLIB/Graphics/Shapes2D/CMakeLists.txt
+++ b/include/BLIB/Graphics/Shapes2D/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
     BatchShape2D.hpp
     CircleBase.hpp
+    IconBase.hpp
     RectangleBase.hpp
     Shape2D.hpp
     SingleShape2D.hpp
