--- a/include/BLIB/Interfaces/GUI/Elements/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Elements/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(BLIB PUBLIC
     CompositeElement.hpp
     Container.hpp
     Element.hpp
+    Icon.hpp
     Image.hpp
     Label.hpp
     Notebook.hpp
