Implement SliderComponent. Fix some icon issues

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -14,6 +14,7 @@ target_sources(BLIB PUBLIC
     ProgressBarComponent.hpp
     RadioButtonComponent.hpp
     SeparatorComponent.hpp
+    SliderComponent.hpp
     TextEntryComponent.hpp
     WindowComponent.hpp
 )
