Mostly implement scroll area component. Some issues with scissor

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources(BLIB PUBLIC
     OverlayHighlightProvider.hpp
     ProgressBarComponent.hpp
     RadioButtonComponent.hpp
+    ScrollAreaComponent.hpp
     SeparatorComponent.hpp
     SliderComponent.hpp
     TextEntryComponent.hpp
