--- a/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/src/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(BLIB PRIVATE
+    AnimationComponent.cpp
     BasicTooltipProvider.cpp
     BoxComponent.cpp
     ButtonComponent.cpp
