--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(BLIB PUBLIC
     ProgressBarComponent.hpp
     RadioButtonComponent.hpp
     ScrollAreaComponent.hpp
+    SelectBoxComponent.hpp
     SeparatorComponent.hpp
     SliderComponent.hpp
     TextEntryComponent.hpp
