--- a/include/BLIB/Systems/CMakeLists.txt
+++ b/include/BLIB/Systems/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(BLIB PUBLIC
 	OverlayScalerSystem.hpp
 	RendererUpdateSystem.hpp
 	RenderSystem.hpp
+	SceneObjectRemovalSystem.hpp
 	TogglerSystem.hpp
 	Transform2DDescriptorSystem.hpp
 	VelocitySystem.hpp
