--- a/src/Systems/CMakeLists.txt
+++ b/src/Systems/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PRIVATE
 	OverlayScalerSystem.cpp
 	RendererUpdateSystem.cpp
 	RenderSystem.cpp
+	SceneObjectRemovalSystem.cpp
 	TogglerSystem.cpp
 	Transform2DDescriptorSystem.cpp
 	VelocitySystem.cpp
