Add BatchShapeProvider intermediate base class for components

--- a/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
+++ b/include/BLIB/Interfaces/GUI/Renderer/Basic/CMakeLists.txt
@@ -17,6 +17,7 @@ target_sources(BLIB PUBLIC
     ScrollAreaComponent.hpp
     SelectBoxComponent.hpp
     SeparatorComponent.hpp
+    ShapeBatchProvider.hpp
     SliderComponent.hpp
     TextEntryComponent.hpp
     WindowComponent.hpp
