Implement sprite batching

--- a/include/BLIB/Graphics/CMakeLists.txt
+++ b/include/BLIB/Graphics/CMakeLists.txt
@@ -2,8 +2,10 @@ target_sources(BLIB PUBLIC
 	Animation2D.hpp
 	BatchCircle.hpp
 	BatchedShapes2D.hpp
+	BatchedSprites.hpp
 	BatchIcon.hpp
 	BatchRectangle.hpp
+	BatchSprite.hpp
 	BatchTriangle.hpp
 	Circle.hpp
 	Drawable.hpp
