--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
 	Animation2D.hpp
 	Animation2DPlayer.hpp
 	BatchedShapes2D.hpp
+	BatchedSprites.hpp
 	Mesh.hpp
 	Orientation3D.hpp
 	OverlayScaler.hpp
