--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PRIVATE
 	Animation2D.cpp
 	Animation2DPlayer.cpp
 	BatchedShapes2D.cpp
+	BatchedSprites.cpp
 	Mesh.cpp
 	Orientation3D.cpp
 	OverlayScaler.cpp
