Implement batched slideshow animations

--- a/include/BLIB/Graphics/CMakeLists.txt
+++ b/include/BLIB/Graphics/CMakeLists.txt
@@ -2,9 +2,11 @@ target_sources(BLIB PUBLIC
 	Animation2D.hpp
 	BatchCircle.hpp
 	BatchedShapes2D.hpp
+	BatchedSlideshows.hpp
 	BatchedSprites.hpp
 	BatchIcon.hpp
 	BatchRectangle.hpp
+	BatchSlideshow.hpp
 	BatchSprite.hpp
 	BatchTriangle.hpp
 	Circle.hpp
