Fix and simplify example shader copying. Clean up old compiled shaders

--- a/examples/Renderer/CMakeLists.txt
+++ b/examples/Renderer/CMakeLists.txt
@@ -15,8 +15,9 @@ set_target_properties(renderer
 # Copy compiled shaders. This step is not needed for top-level targets that set SHADER_PATH
 if(TARGET blib_builtin_shaders)
     add_custom_target(copy_renderer_shaders
-        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy_shaders.cmake
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}/${SHADER_PATH}" "${CMAKE_CURRENT_LIST_DIR}/${SHADER_PATH}"
         DEPENDS blib_builtin_shaders
+        COMMENT "Copying shaders to Renderer example"
     )
     add_dependencies(renderer copy_renderer_shaders)
 else()
