--- a/examples/Engine/CMakeLists.txt
+++ b/examples/Engine/CMakeLists.txt
@@ -20,8 +20,9 @@ set_target_properties(engine
 # Copy compiled shaders. This step is not needed for top-level targets that set SHADER_PATH
 if(TARGET blib_builtin_shaders)
     add_custom_target(copy_engine_shaders
-        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy_shaders.cmake
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}/${SHADER_PATH}" "${CMAKE_CURRENT_LIST_DIR}/${SHADER_PATH}"
         DEPENDS blib_builtin_shaders
+        COMMENT "Copying shaders to Engine example"
     )
     add_dependencies(engine copy_engine_shaders)
 else()
