--- a/examples/Graphics/CMakeLists.txt
+++ b/examples/Graphics/CMakeLists.txt
@@ -15,8 +15,9 @@ set_target_properties(graphics
 # Copy compiled shaders. This step is not needed for top-level targets that set SHADER_PATH
 if(TARGET blib_builtin_shaders)
     add_custom_target(copy_animation_shaders
-        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy_shaders.cmake
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_SOURCE_DIR}/${SHADER_PATH}" "${CMAKE_CURRENT_LIST_DIR}/${SHADER_PATH}"
         DEPENDS blib_builtin_shaders
+        COMMENT "Copying shaders to Graphics example"
     )
     add_dependencies(graphics copy_animation_shaders)
 else()
