Limit light level in shaders. Implement interface for manipulating lighting

--- a/include/BLIB/Render/CMakeLists.txt
+++ b/include/BLIB/Render/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(Components)
 add_subdirectory(Descriptors)
 add_subdirectory(Events)
 add_subdirectory(Graph)
+add_subdirectory(Lighting)
 add_subdirectory(Primitives)
 add_subdirectory(Resources)
 add_subdirectory(Scenes)
