--- a/include/BLIB/Render/Buffers/CMakeLists.txt
+++ b/include/BLIB/Render/Buffers/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PUBLIC
 	DynamicSSBO.hpp
 	IndexBuffer.hpp
 	StaticSSBO.hpp
+	StaticUniformBuffer.hpp
 	UniformBuffer.hpp
 	VertexBuffer.hpp
 )
