Add tilemap position and direction components from Peoplemon

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,4 +17,5 @@ add_subdirectory(Resources)
 add_subdirectory(Scripts)
 add_subdirectory(Serialization)
 add_subdirectory(Systems)
+add_subdirectory(Tilemap)
 add_subdirectory(Util)
