--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(BLIB PUBLIC
 	Sprite.hpp
 	Text.hpp
 	Texture.hpp
+	TilemapPosition.hpp
 	Toggler.hpp
 	Transform2D.hpp
 	Transform3D.hpp
