Fix several sources of memory corruption

--- a/src/Resources/CMakeLists.txt
+++ b/src/Resources/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(BLIB PRIVATE
     FileSystem.cpp
     GarbageCollector.cpp
     ResourceManager.cpp
+    State.cpp
 )
 
 add_subdirectory(Bundling)
