Begin stubbing out interfaces for new particle system

--- a/include/BLIB/Particles/CMakeLists.txt
+++ b/include/BLIB/Particles/CMakeLists.txt
@@ -1,3 +1,10 @@
 target_sources(BLIB PUBLIC
+    Affector.hpp
+    Emitter.hpp
+    ParticleManager.hpp
+    ParticleManagerBase.hpp
+    ParticleSystem.hpp
+    Renderer.hpp
+    Sink.hpp
     System.hpp
 )
