--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(Interfaces)
 add_subdirectory(Logging)
 add_subdirectory(Math)
 add_subdirectory(Parser)
+add_subdirectory(Particles)
 add_subdirectory(Render)
 add_subdirectory(Resources)
 add_subdirectory(Scripts)
