Begin implementing particle system example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(Graphics)
 add_subdirectory(GUI)
 add_subdirectory(Logging)
 add_subdirectory(Menu)
+add_subdirectory(Particles)
 add_subdirectory(Renderer)
 add_subdirectory(Resources)
