--- a/include/BLIB/Render/Buffers/CMakeLists.txt
+++ b/include/BLIB/Render/Buffers/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(BLIB PUBLIC
 	BatchIndexBuffer.hpp
 	DynamicSSBO.hpp
+	FullyDynamicSSBO.hpp
 	IndexBuffer.hpp
 	StaticSSBO.hpp
 	StaticUniformBuffer.hpp
