Add ability for affectors, sinks, and emitters to erase themselves

--- a/examples/Particles/CMakeLists.txt
+++ b/examples/Particles/CMakeLists.txt
@@ -1,3 +1,6 @@
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 add_executable(particles main.cpp)
 
 add_subdirectory(Shaders)
