Add compile-time maps for renderer and render configs. Provide default renderer and ECS component

--- a/include/BLIB/Particles/CMakeLists.txt
+++ b/include/BLIB/Particles/CMakeLists.txt
@@ -1,11 +1,17 @@
 target_sources(BLIB PUBLIC
     Affector.hpp
+    EcsComponent.hpp
     Emitter.hpp
     Link.hpp
+    MetaUpdater.hpp
     ParticleManager.hpp
     ParticleManagerBase.hpp
     ParticleSystem.hpp
+    RenderComponentMap.hpp
+    RenderConfigMap.hpp
     Renderer.hpp
+    Renderer.inl
+    RenderTypeMap.hpp
     Sink.hpp
     System.hpp
 )
