--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,12 +42,10 @@ add_library(BLIB STATIC)
 set(BLIB_TEMP_INCLUDE_DIR ${CMAKE_BINARY_DIR}/blib_temp_includes)
 file(MAKE_DIRECTORY ${BLIB_TEMP_INCLUDE_DIR})
 
-set(
-    CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
-    "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
-    "${CMAKE_CURRENT_SOURCE_DIR}/lib/SFML/cmake"
-    "${CMAKE_CURRENT_SOURCE_DIR}/lib/SFML/cmake/modules"
-)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+include(set_module_path)
+set_module_path()
+
 include(configure_blib_target)
 configure_blib_target(BLIB)
 
