Implement (untested) generic descriptor set factory and instance

--- a/include/BLIB/Render/Descriptors/CMakeLists.txt
+++ b/include/BLIB/Render/Descriptors/CMakeLists.txt
@@ -5,7 +5,11 @@ target_sources(BLIB PUBLIC
 	DescriptorSetFactoryCache.hpp
 	DescriptorSetInstance.hpp
 	DescriptorSetInstanceCache.hpp
+	GenericDescriptorSetFactory.hpp
+	GenericDescriptorSetInstance.hpp
 	SceneDescriptorSetInstance.hpp
+	SetWriteHelper.hpp
 )
 
 add_subdirectory(Builtin)
+add_subdirectory(Generic)
