--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(BLIB PUBLIC
     BatchedScene.hpp
+    CodeScene.hpp
+    CodeSceneObject.hpp
     Key.hpp
     Scene.hpp
     SceneObject.hpp
