--- a/src/Render/Scenes/CMakeLists.txt
+++ b/src/Render/Scenes/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PRIVATE
     BatchedScene.cpp
+    CodeScene.cpp
     Scene.cpp
     SceneObject.cpp
     SceneRenderContext.cpp
