--- a/src/Render/Vulkan/CMakeLists.txt
+++ b/src/Render/Vulkan/CMakeLists.txt
@@ -18,6 +18,8 @@ target_sources(BLIB PRIVATE
     StandardAttachmentBuffers.cpp
     Swapchain.cpp
     Texture.cpp
+    TextureBase.cpp
+    TextureDoubleBuffered.cpp
     VulkanState.cpp
 )
 
