--- a/include/BLIB/Render/Scenes/CMakeLists.txt
+++ b/include/BLIB/Render/Scenes/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(BLIB PUBLIC
     SceneObject.hpp
     SceneObjectStorage.hpp
     SceneRenderContext.hpp
+    SceneSync.hpp
     Scene2D.hpp
     Scene3D.hpp
 )
