--- a/src/Render/Scenes/CMakeLists.txt
+++ b/src/Render/Scenes/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(BLIB PRIVATE
     Scene.cpp
     SceneObject.cpp
     SceneRenderContext.cpp
+    SceneSync.cpp
     Scene2D.cpp
     Scene3D.cpp
 )
