Add property helpers

--- a/include/BLIB/Engine/CMakeLists.txt
+++ b/include/BLIB/Engine/CMakeLists.txt
@@ -3,6 +3,8 @@ target_sources(BLIB PUBLIC
     Engine.hpp
     Flags.hpp
     FrameStage.hpp
+    Properties.hpp
+    Property.hpp
     Settings.hpp
     State.hpp
     System.hpp
