--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -2,6 +2,8 @@ target_sources(BLIB PRIVATE
     Configuration.cpp
     Engine.cpp
     Flags.cpp
+    Properties.cpp
+    Property.cpp
     Settings.cpp
     Systems.cpp
     Worker.cpp
