Add hitbox2d component with tests

--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(BLIB PUBLIC
 	BatchedShapes2D.hpp
 	BatchedSlideshows.hpp
 	BatchedSprites.hpp
+	Hitbox2D.hpp
 	Mesh.hpp
 	Orientation3D.hpp
 	OverlayScaler.hpp
