Add MarkedForDeath component and system

--- a/include/BLIB/Components/CMakeLists.txt
+++ b/include/BLIB/Components/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(BLIB PUBLIC
 	BatchedSlideshows.hpp
 	BatchedSprites.hpp
 	Hitbox2D.hpp
+	MarkedForDeath.hpp
 	Mesh.hpp
 	Orientation3D.hpp
 	OverlayScaler.hpp
