--- a/src/Systems/CMakeLists.txt
+++ b/src/Systems/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(BLIB PRIVATE
 	Animation2DSystem.cpp
+	MarkedForDeath.cpp
 	OverlayScalerSystem.cpp
 	RendererUpdateSystem.cpp
 	RenderSystem.cpp
