--- a/include/BLIB/Systems/CMakeLists.txt
+++ b/include/BLIB/Systems/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(BLIB PUBLIC
 	Animation2DSystem.hpp
 	BuiltinDescriptorComponentSystems.hpp
 	DescriptorComponentSystem.hpp
+	MarkedForDeath.hpp
 	OverlayScalerSystem.hpp
 	RendererUpdateSystem.hpp
 	RenderSystem.hpp
